[tool.poetry]
name = "light"
version = "0.1.0"
description = ""
authors = ["Zutatensuppe <oo.para@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pywizlight = "^0.5.2"
twitchio = "^2.1.4"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
